support get current version in coordinator
